Modify Md Format

--- a/Week1/1. Modular Arithmetic.ipynb
+++ b/Week1/1. Modular Arithmetic.ipynb
@@ -10,7 +10,7 @@
     "- $Z_n$: Denote the set $[0, 1, 2, ..., n-1]$ by it.\n",
     "<br>\n",
     "\n",
-    "- $x = y(modn)$: $x$ and $y$ are congruent modulo $n$, $y$ is residue                  of $x$. By default, we calculate least residue as                    $y$."
+    "- $x = y(mod\\; n)$: $x$ and $y$ are congruent modulo $n$, $y$ is residue                  of $x$. By default, we calculate least residue as                    $y$."
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "### 2. Arithmetic in $Z_n$\n",
     "\n",
-    "- No notion of size, like $0<4(mod8)$ is nonsense.\n",
+    "- No notion of size, like $0<4(mod\\; 8)$ is nonsense.\n",
     "<br>\n",
     "\n",
     "- Operations including add, substract, multiply behave similarly to     their mundane counterparts.\n",
@@ -48,7 +48,7 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz:how to Proof?"
+    "### Quiz1: how to Proof?"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz: how to Proof?"
+    "### Quiz2: how to Proof?"
    ]
   },
   {
