--- a/Week1/2. Euclid's Algorithm.ipynb
+++ b/Week1/2. Euclid's Algorithm.ipynb
@@ -55,10 +55,16 @@
     "    Given integers $a,b,c$, find all integers $x,y$, such that $c=x*a+y*b$.\n",
     "</p>\n",
     "\n",
-    "- Let $d=gcd(a,b)$, $d$ must divide $c$, thus $c=k*d$. Based on Extended Euclidean Algorithm, $m,n$ can be found heuristically, then we get $x=k*m,y=k*n$.\n",
-    "- Suppose $x',y'$ is another solution, then $c=x*a+y*b=x'*a+y'*b$. Let $a=a'*d,b=b'*d$, then $(x'-x)a'=(y-y')b'$. Because $a',b'$ are coprime, then $x'-x=t*b',y-y'=t*a'$.\n",
-    "- Based on inference above, general solution is $x=k*m-t*b/d,y=k*n+t*a/d\\;(for\\;all\\;integers\\;t)$.<br><br>\n",
-    "- For $1=x*p+y*q$ and $p,q$ are coprime, then $x=m-t*q,y=n+t*p$."
+    "- Step1: Let $d=gcd(a,b)$, $d$ must divide $c$, thus $c=k*d$. Based on Extended Euclidean Algorithm, $m,n$ can be found heuristically, then we get $x=k*m,y=k*n$.\n",
+    "<br><br>\n",
+    "\n",
+    "- Step2: Suppose $x',y'$ is another solution, then $c=x*a+y*b=x'*a+y'*b$. Let $a=a'*d,b=b'*d$, then $(x'-x)a'=(y-y')b'$. Because $a',b'$ are coprime, then $x'-x=t*b',y-y'=t*a'$.\n",
+    "<br><br>\n",
+    "\n",
+    "- Step3: Based on inference above, general solution is $x=k*m-t*b/d,y=k*n+t*a/d\\;(for\\;all\\;integers\\;t)$.\n",
+    "<br><br><br>\n",
+    "\n",
+    "- Coprime Case: for $1=x*p+y*q$ and $p,q$ are coprime, then $x=m-t*q,y=n+t*p$."
    ]
   },
   {
