--- a/Week1/4. The Chinese Remainder Theorem.ipynb
+++ b/Week1/4. The Chinese Remainder Theorem.ipynb
@@ -63,16 +63,16 @@
     "2. Computation time cost reduction\n",
     "    - Do computation in smaller numbers by bijection and convert back after that. Tradeoff is reduction in time cost in turn doubling the size of the input.\n",
     "    \n",
-    "### Quiz: compute $17 \\times 17(mod\\;35)$ by bijection"
+    "### Quiz1: compute $17 \\times 17(mod\\;35)$ by bijection"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07ab354b",
+   "cell_type": "markdown",
+   "id": "a2f03029",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Quiz2: why $Z_p(p\\; is\\; prime)$ is most import case?"
+   ]
   },
   {
    "cell_type": "code",
