--- a/Week1/1. Modular Arithmetic.ipynb
+++ b/Week1/1. Modular Arithmetic.ipynb
@@ -29,7 +29,7 @@
     "- Division \n",
     "    1. Division should be \"undo multiplication\". Because for both sides divided by same number resulting in incorrect equation, that is to divide $x$ by $y$ means to find a number $z$ such that $y$ times $z$ is $x$.\n",
     "\n",
-    "    <br> eg. $10 = 4(mod6) => 10/2\\;\\; != \\;\\;4/2(mod6)$ \n",
+    "    <br> eg. $10 = 4(mod\\; 6) => 10/2\\;\\; != \\;\\;4/2(mod\\; 6)$ \n",
     "    <br>\n",
     "    <br>\n",
     "    2. It is required uniqueness, that is $x$ divided by $y$ modulo $n$ is only defined when there is a unique $z∈Z_n$, such that $x=yz$."
@@ -59,7 +59,7 @@
     "### 4. Inverses\n",
     "\n",
     "<p>\n",
-    "    For $x=yz$, a unique $z$ exists if and only if it is possible to find a unique $w∈Z_n$ such that $yw=1(modn)$.\n",
+    "    For $x=yz$, a unique $z$ exists if and only if it is possible to find a unique $w∈Z_n$ such that $yw=1(mod\\; n)$.\n",
     "</p>\n",
     "    \n",
     "   \n",
