Create 2-6&7, Modify Typo

--- a/Week1/1. Modular Arithmetic.ipynb
+++ b/Week1/1. Modular Arithmetic.ipynb
@@ -48,7 +48,7 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz1: how to Proof?"
+    "### Quiz1: how to Prove the Theorem?"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz2: how to Proof?"
+    "### Quiz2: how to Prove it?"
    ]
   },
   {
