--- a/Week1/2. Euclid's Algorithm.ipynb
+++ b/Week1/2. Euclid's Algorithm.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "- The iteration equations can be used to find integers $m,n$ such that $d=gcd(a,b)=m*a+n*b$\n",
     "\n",
-    "### Quiz: how to find $m,n$ for $a=33,b=27$?"
+    "### Quiz1: how to find $m,n$ for $a=33,b=27$?"
    ]
   },
   {
