--- a/Week2/5. Units and the Totient Function.ipynb
+++ b/Week2/5. Units and the Totient Function.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "- Bijection：Let $m,n$ be coprime, by Chinese Remainder Theorem, $x$ is a unit if and only if $a$ and $b$ are, then we have $Z^*_{pq}=Z^*_p\\times Z^*_q$.\n",
     "\n",
-    "### Quiz1: How to proof?\n",
+    "### Quiz1: How to prove it?\n",
     "\n",
     "- Extensive formulas\n",
     "    - For $p,q$ coprime, we have $\\phi(pq)=\\phi(p)\\phi(q)$.\n",
