--- a/Week2/6. Modular Exponentiation.ipynb
+++ b/Week2/6. Modular Exponentiation.ipynb
@@ -2,53 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b04ebe79",
+   "id": "3dad2e55",
    "metadata": {},
    "source": [
-    "### 1. Math Symbol\n",
+    "### 1. Warmup Test (Quiz1)\n",
     "\n",
-    "- $y^{-1}$: The inverse of $y$."
+    "<p>\n",
+    "    Time complexity to calculate $a^k(mod\\;n)$ heuristically instead of brute force.\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "64c9ed48",
+   "id": "055a499e",
    "metadata": {},
    "source": [
-    "### 2. Solve the quiz(The Proof Problem) in Modular Arithmetic\n",
+    "### 2. The discrete log problem\n",
+    "\n",
     "<p>\n",
-    "    For $x=yz$, a unique $z$ exists if and only if it is possible to find a unique $w∈Z_n$ such that $yw=1(mod\\;n)$.\n",
+    "    Let $p$ be a prime, and $g,h$ be two elements of $Z^*_p$, suppose $g^x=h(mod\\; p)$, what is $x$?\n",
     "</p>\n",
     "\n",
-    "- $x=z*y+k*n$, let $d=gcd(y,n),d=a*y+b*n,x=c*d$, then $z=c*a-t*n/d$ (for all integers $t$). Because $z$ is unique, we can get $d=1,c=x$, then $z=ax+tn$.\n",
-    "- As inference above, we can get $1=a*y+b*n$ and $y^{-1}=a$ because $a$ is unique.<br><br>\n",
-    "\n",
-    "- We can also see $y$ has an inverse if and only if $gcd(y,n)=1$\n",
-    "### Quiz1: how to Prove it?"
+    "Tips: The best discrete log algorithms are faster than trying every element, but are not polynomial time."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5b9ea98",
+   "id": "fc0443ab",
    "metadata": {},
    "source": [
-    "### 3. Compute Inverse\n",
+    "### 3. Nonunits under exponentiation\n",
     "\n",
-    "<p>\n",
-    "    Given $y∈Z_n$, does $y^{-1}$ exists, if so, what is it?\n",
-    "</p>\n",
-    "\n",
-    "- Brute Force by iterating from $0$ to $n-1$.<br><br>\n",
-    "\n",
-    "- Heuristic algorithm:\n",
-    "    1. Calculate $d=gcd(y,n)$ by Euclid's Algorithm.\n",
-    "    2. If $d=1$, rearrange equations from computation of Euclid's Algorithm and transform into formation of $1=a*y+b*n$, then $y^{-1}=a$"
+    "- For prime $p$:<br>\n",
+    "  Consider $n=p^k$, then $a∈Z_n$ is nonunit when $gcd(a,n)>1$, which means $a=dp$ for some $d$. Thus, we have $a^k=d^kp^k=0$. <br>\n",
+    "  \n",
+    "- For primes $p_i$:<br>\n",
+    "  - Consider $n=\\prod_{i=1}^{i=m} (p_i^{k_i})$, by Chinese Remainder Theorem we have \n",
+    "  $Z_n=Z_{p_1^{k_1}}\\times Z_{p_2^{k_2}}... \\times Z_{p_m^{k_m}}$.<br>\n",
+    "  - Thus for $a∈Z_n$ responds to some $(a_1, a_2, ..., a_m)$, there is at least one certain $a_i$ is a multiple of $p_i$, it means  $a^{k_i}=0(mod \\;p_i^{k_i})$. <br>\n",
+    "  - In general, for some $k$, each $a^{k}mod(p_i^{k_i})$ is zero or nonunit, thus $a^{k}mod\\;n$ is nonunit. Hence, we can restrict our study to units."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e27b18",
+   "id": "6ee17cad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -56,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3489356f",
+   "id": "f824a45e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33b28e96",
+   "id": "2bbd4e93",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -72,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ae65b2",
+   "id": "dab9ee43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03608e0",
+   "id": "ec0a4c20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b57439",
+   "id": "01908614",
    "metadata": {},
    "outputs": [],
    "source": []
