Week2 Notebook Finished

--- a/Week1/1. Modular Arithmetic.ipynb
+++ b/Week1/1. Modular Arithmetic.ipynb
@@ -48,7 +48,9 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz1: how to Prove the Theorem?"
+    "### Quiz1: how to Prove the Theorem?\n",
+    "\n",
+    "- Let $z_1,z_2$ satisfy $yz_1=yz_2$, then $y(z_1-z_2)=kn$, if $gcd(y,n)=d$, then $z_1-z_2=c*n/d$ which means if $d=1$, then $z_1=z_2$."
    ]
   },
   {
@@ -65,7 +67,12 @@
     "   \n",
     "<br>\n",
     "\n",
-    "### Quiz2: how to Prove it?"
+    "### Quiz2: how to Prove it?\n",
+    "\n",
+    "- =>: suppose $z_1,z_2$ satisfy $yz_1=yz_2$, if there is unique $w$, then $wyz_1=wyz_2$, we have $z_1=z_2$. Thus, $z$ is unique.\n",
+    "- <=: \n",
+    "    - Uniqueness: suppose $w,w'$ satisfy $wyw=wyw'=1$, then $(wy)w=(wy)w'$, thus we have $w=w'$.\n",
+    "    - Existence of unique $z$: $wx=wyz$, then $z=wx$."
    ]
   },
   {
