--- a/Week2/8. Primality Tests.ipynb
+++ b/Week2/8. Primality Tests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a882a4",
+   "id": "99f4f32e",
    "metadata": {},
    "source": [
     "### 2. Flaw of the Fermat Test\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9a84f6",
+   "id": "9aee33ef",
    "metadata": {},
    "source": [
     "### 3. Carmichael Numbers\n",
@@ -47,16 +47,16 @@
     "\n",
     "- Example: \n",
     "<p>\n",
-    "    Take $n=561=3\\times 11\\times 7$. By $Chinese\\; Remainder\\; Theorem$, $Z_{561}=Z_3\\times Z_{11}\\times Z_7$.<br>\n",
-    "    Each $a\\in Z^*_{561}$ corresponds to some $(x,y,z)\\in Z^*_3\\times Z^*_{11}\\times Z^*_7$,<br>\n",
-    "    By Fermat's Theorem, $x^2=1,y^{10}=1,z^6=1$, since $2,10,6$ are all factors of $560$, this means $(x,y,z)^{560}=(1,1,1)$. <br><br>\n",
+    "    Take $n=561=3\\times 11\\times 17$. By $Chinese\\; Remainder\\; Theorem$, $Z_{561}=Z_3\\times Z_{11}\\times Z_{17}$.<br>\n",
+    "    Each $a\\in Z^*_{561}$ corresponds to some $(x,y,z)\\in Z^*_3\\times Z^*_{11}\\times Z^*_{17}$,<br>\n",
+    "    By Fermat's Theorem, $x^2=1,y^{10}=1,z^{16}=1$, since $2,10,6$ are all factors of $560$, this means $(x,y,z)^{560}=(1,1,1)$. <br><br>\n",
     "    In other words, $a^{560}=1$ for any $a\\in Z^*_{561}$ and $a$ is a Carmichael Number.\n",
     "</p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96fc0da1",
+   "id": "d4dd15cc",
    "metadata": {},
    "source": [
     "### 4. The Miller-Rabin Test\n",
@@ -78,44 +78,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0fa2d5",
+   "id": "51c2ba8a",
    "metadata": {},
    "source": [
-    "### Quiz1: \n",
-    "<p>What happens when we run the Miller-Rabin test on numbers of the form <em>p*q</em>, where <em>p, q</em> are large primes? Can we break RSA with it?</p>"
+    "### 5. Example of Miller-Rabin Test\n",
+    "- From Calculation as below:\n",
+    "    - 67 is the \"Bad\" solution which doesn't pass test.\n",
+    "    - we can find factors of 561 by calculating $gcd(68,561)=17,gcd(66,561)=33=3*11$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bbf5f9da",
+   "execution_count": 18,
+   "id": "54eb3a5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s is 4\n",
+      "\n",
+      "Test Passed In Current Round!\n",
+      "Power is:  560\n",
+      "\n",
+      "\n",
+      "Test Passed In Current Round!\n",
+      "Power is:  280\n",
+      "\n",
+      "\n",
+      "Test Failed!\n",
+      "Square root value is: 67, Power is 140\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 561\n",
+    "a = 2\n",
+    "\n",
+    "power = n - 1\n",
+    "\n",
+    "s_start = 0\n",
+    "while True:\n",
+    "    if (n-1) % 2 ** (s_start + 1) == 0:\n",
+    "        s_start += 1\n",
+    "    else:\n",
+    "        break\n",
+    "s_max = s_start\n",
+    "print(\"s is {}\\n\".format(s_max))\n",
+    "\n",
+    "while True:\n",
+    "    if power % 2 > 0:\n",
+    "        print(\"Test Passed! Power reach mininum value: {}\".format(power))\n",
+    "        break\n",
+    "    \n",
+    "    if 2 ** power % 561 == 1:\n",
+    "        print('Test Passed In Current Round!')\n",
+    "        print('Power is: ', power)\n",
+    "        \n",
+    "        power = power // 2\n",
+    "    elif 2 ** power % 561 == 560:\n",
+    "        print('Test Passed! Square root value reaches -1')\n",
+    "        break\n",
+    "    else:\n",
+    "        print('Test Failed!')\n",
+    "        print('Square root value is: {}, Power is {}'.format(2 ** power % 561, power))\n",
+    "        break\n",
+    "    \n",
+    "    print('\\n')"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf9a4bc2",
+   "cell_type": "markdown",
+   "id": "064a9951",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f77f2263",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81536402",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Quiz1: \n",
+    "<p>What happens when we run the Miller-Rabin test on numbers of the form <em>p*q</em>, where <em>p, q</em> are large primes? Can we break RSA with it?</p>\n",
+    "\n",
+    "- For $n=p*q$, given $a$, if $a^{p*q-1}=1$ and we can use Miller-Rabin test to factorize $a$.<br>\n",
+    "  Furthermore, correspond $a$ to $(m,n)\\in Z_p\\times Z_q$, then $a^{p*q-1}$ correspond to $(m^{p*q-1,n^{p*q-1}})$.<br> \n",
+    "  So we need to find combinations of $(m,n)\\in (m^{p*q-1}=m^{q-1}=\\pm1,n^{p*q-1}=n^{p-1}=\\pm1)$ and $(m,n)\\notin\\{(1,1),(-1,-1)\\}$ to factorize $a$."
+   ]
   }
  ],
  "metadata": {
