--- a/Week2/5. Units and the Totient Function.ipynb
+++ b/Week2/5. Units and the Totient Function.ipynb
@@ -8,7 +8,7 @@
     "### 1. Math Symbol\n",
     "\n",
     "- $unit$: if $y∈Z_n$ is invertible ($y^{-1}$ exists), then $y$ is a unit of $Z_n$.\n",
-    "- $Z^*_{n'}$: the set of units of $Z_n$ is denoted by $Z^*_{n'}$ or $Z^{\\times}_n$"
+    "- $Z^*_{n}$: the set of units of $Z_n$ is denoted by $Z^*_{n}$ or $Z^{\\times}_n$"
    ]
   },
   {
